--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141450805-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141450805-4');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -34,16 +44,16 @@
       <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
     </div>
     <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
-      <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+      <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
           Our Story
       </a>
-      <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+      <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
           Photos
       </a>
     </div>
   </nav>
 </div>
-<div id="main" class="flex flex-wrap xxs:pt-2 md:pt-10 xl:pt-12">
+<div class="flex flex-wrap xxs:pt-2 md:pt-10 xl:pt-12">
 	  <h1 class="flex w-full justify-center font-body xxs:tracking-widest xl:tracking-loose leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl pt-6 animated zoomIn delay-1s">Eyram</h1>
 	  <div class="flex w-full justify-center">
@@ -58,14 +68,14 @@
     </h1>
 </div>
 
-<div id="clock" class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 animated slideInUp">
+<div class="flex flex-wrap font-body text-white tracking-tighter leading-none text-4xl pt-12 animated slideInUp">
     <div id="days" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-black text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="hours" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="minutes" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
     <div id="seconds" class="flex justify-center xxs:w-full md:w-1/4"><span class="font-extrabold text-appgold xxs:text-8xl xl:text-10xl animated zoomIn delay-1s"></span><span class="pl-4"></span></div>
 </div>
 
-<div id="last" class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 md:pt-12">
+<div class="flex justify-center font-body text-white tracking-tighter leading-none text-4xl xxs:pt-2 md:pt-12">
     <a href="#"><button class="xxs:text-xl lg:text-3xl py-2 px-4 border border-appgold focus:outline-none shadow-xl animated pulse delay-2s">
      Click Here To RSVP!
     </button></a>
