--- a/photos.html
+++ b/photos.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141450805-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141450805-4');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -22,10 +32,10 @@
               <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
       </div>
       <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
-        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
                 Our Story
         </a>
-        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-2 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
                 Contact
         </a>
       </div>
