--- a/rsvp.html
+++ b/rsvp.html
@@ -41,14 +41,14 @@
                   <div class="w-full xxs:pr-4" data-netlify-recaptcha="true">
 
                   </div>
-                  <button class="border border-appgold focus:outline-none shadow-xl py-2 px-4 my-6" type="submit">
+                  <button class="border border-appgold focus:outline-none shadow-2xl py-2 px-4 my-6" type="submit">
                   send
                   </button>
               </div>
             </form>  
         </div>
-        <div id="map" class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white shadow-xl xxs:px-20 xxs:py-10 xl:px-20 xl:pt-48">
-          <a href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="shadow-xl border-4 border-appgold" src="/resources/img/location.png" alt="directions"></a>
+        <div id="map" class="xxs:w-full xl:w-1/2 font-black text-black text-center bg-white shadow-2xl xxs:px-20 xxs:py-10 xl:px-20 xl:pt-48">
+          <a href="https://www.google.com/maps/place/5%C2%B032'59.0%22N+0%C2%B014'02.0%22W/@5.549712,-0.2344212,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d5.5497123!4d-0.2338741"><img class="shadow-2xl border-4 border-appgold" src="/resources/img/location.png" alt="directions"></a>
           <p>Click on Map to show directions</p>
         </div>
     </div>
