--- a/photos.html
+++ b/photos.html
@@ -14,14 +14,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One|Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/animate.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="resources/css/app.css" rel="stylesheet">
    <title>Eyram &amp; Esi || Photos</title>
 </head>
 
-<body class="bg-appteal font-body text-white h-screen">
+<body class="bg-appteal font-body text-white border-double border-8 border-appgold h-screen">
   <section class="sticky top-0 z-40">
     <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
       <div class="cursor-pointer xxs:ml-5">
@@ -32,7 +32,7 @@
               <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
       </div>
       <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
-        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+        <a href="our-story.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
                 Our Story
         </a>
         <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
