--- a/rsvp.html
+++ b/rsvp.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Poiret+One|Sorts+Mill+Goudy:400i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="resources/css/app.css" rel="stylesheet">
    <title>Eyram &amp; Esi || RSVP</title>
 </head>
 
-<body id="rsvp" class="font-body antialiased">
+<body id="rsvp" class="font-body border-double border-8 border-appgold h-screen antialiased ">
     <div class="flex flex-wrap xxs:text-xl lg:text-3xl h-screen">
         <div class="xxs:w-full xl:w-1/2 text-white bg-appteal xxs:px-20 xxs:pt-20 xl:px-20 xl:pt-48">
           <h1 class="text-center text-5xl tracking-loose  pb-10" >RSVP</h1>
