--- a/our-story.html
+++ b/our-story.html
@@ -22,7 +22,7 @@
    <title>Eyram &amp; Esi || Photos</title>
 </head>
 
-<body class="bg-appteal font-body text-white border-double border-8 border-appgold h-screen">
+<body class="bg-appteal font-body text-white border-double border-8 border-appgold ">
   <section class="sticky top-0 z-40 ">
     <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
       <div class="cursor-pointer xxs:ml-5">
@@ -44,14 +44,14 @@
 </section>
         
 <section>
-  <div class="flex flex-wrap mb-4">
+  <div class="flex flex-wrap mb-12">
       <div class="xxs:w-full lg:w-1/2 text-center">
         <h1 class=" text-8xl">Our Story</h1>
         <p class="text-2xl">&dash;</p>
         <p class="leading-tight text-appgold text-xl px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
         <p class="text-2xl">&dash;</p>
 
-        <p class="leading-tight text-2xl text-justify pl-12">This story, our story began some 7 years ago today. It was a fine sunny Saturday morning, 
+        <p class="leading-tight text-2xl text-justify xxs:px-6 lg:pl-12">This story, our story began some 7 years ago today. It was a fine sunny Saturday morning, 
           my group and I were going on a quarterly charity trip to the Volta Region. Into the bus entered this damsel, when I saw her I knew she was the one for me.
           We became good friends after that and she was really really cool. Fast forward, life got hectic and I left the country for a bit and we stopped talking like we used to. <br> <br>
 
@@ -61,7 +61,7 @@
         </p>
 
       </div>
-      <div class="xxs:w-full lg:w-1/2 lg:px-40 lg:py-10">
+      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-40 lg:py-10">
         <img class="shadow-3xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
