--- a/our-story.html
+++ b/our-story.html
@@ -51,7 +51,7 @@
         <p class="leading-tight text-appgold text-xl px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
         <p class="text-2xl">&dash;</p>
 
-        <p class="leading-tight text-2xl text-justify xxs:px-6 lg:pl-12">This story, our story began some 7 years ago today. It was a fine sunny Saturday morning, 
+        <p class="leading-tight text-2xl text-justify xxs:px-6 lg:pl-12">This story, my story began some 7 years ago today. It was a fine sunny Saturday morning, 
           my group and I were going on a quarterly charity trip to the Volta Region. Into the bus entered this damsel, when I saw her I knew she was the one for me.
           We became good friends after that and she was really really cool. Fast forward, life got hectic and I left the country for a bit and we stopped talking like we used to. <br> <br>
 
@@ -61,8 +61,8 @@
         </p>
 
       </div>
-      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-40 lg:py-10">
-        <img class="shadow-3xl" src="/resources/img/our-story.jpg" alt="our-story">
+      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-40 lg:pt-20">
+        <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
 </section>
