--- a/index.html
+++ b/index.html
@@ -2325,7 +2325,7 @@
     </div>
   </nav>
 </div>
-<div class="flex flex-wrap xxs:pt-2 md:pt-24 lg:pt-24 xl:pt-12">
+<div class="flex flex-wrap xxs:pt-2 xs:pt-16 md:pt-24 xl:pt-12">
 	  <h1 class="flex w-full justify-center font-body xxs:tracking-widest xl:tracking-loose leading-none uppercase">&dash; Save The Date &dash;</h1>
 	  <h1 class="flex w-full justify-center font-body tracking-widest leading-none uppercase xxs:text-5xl md:text-6xl lg:text-8xl xs:pt-3 lg:pt-6 animated zoomIn delay-1s">Eyram</h1>
 	  <div class="flex w-full justify-center">
