--- a/our-story.html
+++ b/our-story.html
@@ -34,10 +34,10 @@
               <svg class="icon fill-current h-8 w-8 hidden" viewBox="0 0 512 512"><path d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"/></svg>
       </div>
       <div class="nav w-full lg:flex lg:items-center lg:w-auto xxs:px-4 xxs:hidden lg:block">
-        <a href="/our-story.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+        <a href="/our-story.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-b-2 lg:border-white">
                 Our Story
         </a>
-        <a href="/photos.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
+        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
                 Photos
         </a>
       </div>
@@ -46,7 +46,7 @@
         
 <div>
   <div class="flex flex-wrap mb-12">
-      <div class="xxs:w-full lg:w-1/2 text-center">
+      <div class="xxs:w-full lg:w-1/2 text-center lg:pt-20">
         <h1 class="xxs:text-6xl text-8xl">Our Story</h1>
         <p class="leading-tight text-2xl">&dash;</p>
         <p class="leading-tight text-appgold text-xl xxs:px-2 xs:px-12 lg:px-24">"The most important things to do in the world are to get something to eat, something to drink and somebody to love you." - <span class="text-gray-500">Brendan Behan</span></p>
@@ -62,7 +62,7 @@
         </p>
 
       </div>
-      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-40 lg:pt-20">
+      <div class="xxs:hidden lg:block lg:w-1/2 lg:px-40 lg:pt-10">
         <img class="shadow-2xl" src="/resources/img/our-story.jpg" alt="our-story">
       </div>
     </div>
