--- a/photos.html
+++ b/photos.html
@@ -21,8 +21,8 @@
    <title>Eyram &amp; Esi || Photos</title>
 </head>
 
-<body class="bg-appteal font-body text-white border-double border-8 border-appgold h-screen">
-  <section class="sticky top-0 z-40">
+<body class="photos-bg bg-appteal font-body text-white border-double border-8 border-appgold">
+  <section class="sticky top-0 z-20">
     <nav class="flex flex-wrap justify-between bg-appteal xxs:py-2">
       <div class="cursor-pointer xxs:ml-5">
               <a href="/"><img src="/resources/img/logo.png" alt="logo"></a>
@@ -35,19 +35,24 @@
         <a href="our-story.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-12 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
                 Our Story
         </a>
-        <a href="#" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-transparent lg:hover:border-b-2 lg:hover:border-white">
-                Contact
+        <a href="/photos.html" class="block lg:inline-block mt-4 lg:mt-0 lg:mr-5 lg:pb-1 lg:border-b-2 lg:border-b-2 lg:border-white">
+                Photos
         </a>
       </div>
     </nav>
 </section>
         
-<div id="bg_text" class="pt-48">
-  <h1 class="text-center text-10xl tracking-loose antialiased animated pulse h-screen z-0">PHOTOS</h1>
+<div id="bg_text" class="py-6">
+  <h1 class="text-center tracking-loose xxs:text-4xl lg:text-10xl antialiased animated zoomIn z-0">PHOTOS</h1>
 </div>
 
-<div id="photos" class="flex flex-wrap -mt-128 z-20">
+<div id="photos" class="flex flex-wrap z-10">
   
+</div>
+
+<div id="myModal" class="modal fixed left-0 top-0 w-full h-full overflow-auto hidden xxs:pt-12 lg:pt-24 z-40">
+    <span class="close absolute text-white text-6xl font-black hover:cursor-pointer hover:text-gray-500 hover:no-underline">&times;</span>
+    <img id="img01" class="animated zoomIn block w-4/5 max-w-2xl  m-auto">
 </div>
 
 <script
